classic models database gui

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /MathsFormulas/target/
+/ClassicModels/nbproject/private/
+/WebApplication1/nbproject/private/
+/ClassicModelsWebApp/nbproject/private/
