JSP, JSF, DAO Design Pattern

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 /ClassicModels/nbproject/private/
 /WebApplication1/nbproject/private/
 /ClassicModelsWebApp/nbproject/private/
+/FrontendApplication/FrontendApplication/target/
+/FrontendApplication/FrontendApplication/shared/target/
+/FrontendApplication/FrontendApplication/js/target/
+/FrontendApplication/FrontendApplication/client/target/
+/FrontendApplication/FrontendApplication/client-web/target/
+/FrontendApplication/FrontendApplication/server/target/
+/JavaServerPages/nbproject/private/
+/JavaServerFaces/nbproject/private/
+/JavaServerPages/build/
+/DAODesignPattern/target/
