--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /JavaServerFaces/nbproject/private/
 /JavaServerPages/build/
 /DAODesignPattern/target/
+/WebDevelopment/PrimeFaces/nbproject/private/
+/WebDevelopment/WebApplication1/nbproject/private/
