Strings In Java

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /WebDevelopment/jsp-servlet-jdbc-mysql-UserManagement/nbproject/private/
 /WebDevelopment/jsp-servlet-jdbc-mysql-UserManagement/build/
 /WebDevelopment/jsp-servlet-jdbc-mysql-UserManagement/dist/
+/WebDevelopment/StringsInJava/target/
