--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@
 /JavaFX/MVC_JavaFX/nbproject/private/
 /JavaFX/MVC_JavaFX/build/
 /JavaFX/MVC_JavaFX/dist/
+/JavaFX/JavaIO/target/
+/JavaFX/logging/target/
